Simplify moves & time

--- a/client/index.html
+++ b/client/index.html
@@ -11,8 +11,8 @@
 <body>
     <section class="container">
         <article class="generators">
-            <div id="time">Time: --:--</div>
-            <div id="moves">Moves: -- </div>
+            <div id="time">seconds: --</div>
+            <div id="moves">moves: -- </div>
         </article>
         <main id="game" class="game"></main>
         <button type="reset" class="reset" onclick="window.location.reload();">Reset Game</button>
