Create leaderboard (UI)

--- a/client/index.html
+++ b/client/index.html
@@ -18,6 +18,12 @@
         <button type="reset" class="reset" onclick="window.location.reload();">Reset Game</button>
     </section>
 
+    <div class="sidebar">
+        <h2>Leaderboard</h2>
+        <ol id="leaderboard"></ol>
+    </div>
+
+
     <script src='./index.js'></script>
 </body>
 
