--- a/client/index.html
+++ b/client/index.html
@@ -1,30 +1,29 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./styles.css">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="./styles.css" />
     <title>PokeMatch</title>
-</head>
+  </head>
 
-<body>
+  <body>
     <section class="container">
-        <article class="generators">
-            <div id="time">seconds: --</div>
-            <div id="moves">moves: -- </div>
-        </article>
-        <main id="game" class="game"></main>
-        <button type="reset" class="reset" onclick="window.location.reload();">Reset Game</button>
+      <article class="generators">
+        <div id="time">seconds: --</div>
+        <div id="moves">moves: --</div>
+      </article>
+      <main id="game" class="game"></main>
+      <button type="reset" class="reset" onclick="window.location.reload();">
+        Reset Game
+      </button>
     </section>
 
     <div class="sidebar">
-        <h2>Leaderboard</h2>
-        <ol id="leaderboard"></ol>
+      <h2>Leaderboard</h2>
+      <ol id="leaderboard"></ol>
     </div>
 
-
-    <script src='./index.js'></script>
-</body>
-
+    <script src="./index.js"></script>
+  </body>
 </html>
